Minor refactors to BridgeSupportPegoutTransactionCreatedEventTest
Minor logging cleanup

Remove static declaration inside Nested testing class

Minor cleanup

Fix code smells